Get Requests for recipe, New activities for Recipe,ShoppingList,Ingredients for the recipe + adding Ingredients to the shop list and changes of the Meals activity. New recycle views + models(added just for the testing) the code needs a lot of refactoring

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".ShowMealActivity" />
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".RecipeInfoActivity" />
+        <activity android:name=".BuyingIngredientsActivity" />
+        <activity android:name=".ShowMealActivity" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".YourIngredientsActivity"></activity>
     </application>
 
 </manifest>
