--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,13 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".BasicActivity" />
+        <activity android:name=".activties.BasicActivity" />
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".WelcomeActivity">
+            android:label="@string/app_name"/>
+        <activity android:name=".activties.MainActivity" />
+        <activity android:name=".activties.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,12 +39,11 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".ShowMealActivity" />
-        <activity android:name=".RecipeInfoActivity" />
-        <activity android:name=".BuyingIngredientsActivity" />
-        <activity android:name=".ShowMealActivity" />
-        <activity android:name=".ProfileActivity" />
-        <activity android:name=".YourIngredientsActivity"></activity>
+        <activity android:name=".activties.ShowMealActivity" />
+        <activity android:name=".activties.RecipeInfoActivity" />
+        <activity android:name=".activties.BuyingIngredientsActivity" />
+        <activity android:name=".activties.ProfileActivity" />
+        <activity android:name=".activties.YourIngredientsActivity"/>
     </application>
 
 </manifest>
