--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,12 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'com.android.support:recyclerview-v7:24.1.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
-
+    compile('com.mikepenz:materialdrawer:5.6.0@aar') {
+        transitive = true
+    }
     testCompile 'junit:junit:4.12'
 }
+
+
