--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
-        <activity android:name=".activties.MainActivity" />
+        <activity android:name=".activties.MainActivity"></activity>
         <activity android:name=".activties.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,8 +42,10 @@
         <activity android:name=".activties.RecipeInfoActivity" />
         <activity android:name=".activties.BuyingIngredientsActivity" />
         <activity android:name=".activties.ProfileActivity" />
-        <activity android:name=".activties.YourIngredientsActivity" />
-        <activity android:name=".activties.DrawerActivity"></activity>
+        <activity android:name=".activties.ShoppingListActivity" />
+        <activity android:name=".activties.DrawerActivity" />
+        <activity android:name=".activties.FavouriteMealsActivity" />
+        <activity android:name=".activties.YourFridgeActivity"></activity>
     </application>
 
 </manifest>
