--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,12 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".CustomApplication">
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -47,7 +47,8 @@
         <activity android:name=".activties.DrawerActivity" />
         <activity android:name=".activties.FavouriteMealsActivity" />
         <activity android:name=".activties.YourFridgeActivity" />
-        <activity android:name=".activties.SearchMealsActivity"/>
+        <activity android:name=".activties.SearchMealsActivity" />
+        <activity android:name=".activties.NutritionsActivity"></activity>
     </application>
 
 </manifest>
