--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.yahoo.mobile.client.android.util.rangeseekbar:rangeseekbar-library:0.1.0'
     compile 'com.uniquestudio:checkbox:1.0.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.4'
     testCompile 'junit:junit:4.12'
 }
 
