Fixed library swipecards almost working perfectly, added one more search option pretty cool needs some wokr, a lot of fixes and some design work, related meals adapter working properly, home screen renovated and redisgend

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".activties.YourFridgeActivity" />
         <activity android:name=".activties.SearchMealsActivity" />
         <activity android:name=".activties.NutritionsActivity" />
+        <activity android:name=".activties.SearchingActivity"></activity>
     </application>
 
 </manifest>
