--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile('com.mikepenz:materialdrawer:5.6.0@aar') {
         transitive = true
     }
+//    compile 'com.github.tibolte:elasticdownload:1.0.+'
     compile 'com.yahoo.mobile.client.android.util.rangeseekbar:rangeseekbar-library:0.1.0'
     compile 'com.uniquestudio:checkbox:1.0.1'
     compile 'com.github.bumptech.glide:glide:3.5.2'
