--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:name=".CustomApplication"
+        android:name=".tools.CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -47,7 +47,8 @@
         <activity android:name=".activties.SearchMealsActivity" />
         <activity android:name=".activties.NutritionsActivity" />
         <activity android:name=".activties.SearchingActivity" />
-        <receiver android:name=".widget.CollectionWidget">
+        <activity android:name=".activties.RecipeIngredientsInfo" />
+        <receiver android:name=".widget.Widget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="ACTION.WIDGET.UPDATE.FROM.ACTIVITY"/>
